--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ body{
     color: white;
     padding: 1em;
     box-shadow: 0em 0em 1em -0.1em grey;
-    font-size: large;
 }
 
 .map-content{
@@ -136,4 +135,8 @@ footer{
 .modal-body{
     max-height: 20em;
     overflow-y: auto;
+}
+
+.co-gray{
+    background: gray;
 }
